# lpc54628-rust

./: Cargo.toml  README.md  jlink.gdb  memory.x
examples/: blink.rs  hello.rs
src/: adc0.rs  async_syscon.rs  can0.rs  ctimer0.rs  dma0.rs  dmic0.rs  eeprom.rs  emc.rs  enet.rs  etm.rs  flexcomm0.rs  fmc.rs  gint0.rs  gpio.rs  i2c0.rs  i2s0.rs  inputmux.rs  iocon.rs  lcd.rs  lib.rs  mrt0.rs  otpc.rs  rit.rs  rtc.rs  sct0.rs  sdif.rs  sha0.rs  smartcard0.rs  spi0.rs  spifi0.rs  sys_tick.rs  syscon.rs  system_control.rs  usart0.rs  usb0.rs  usbfsh.rs  usbhsd.rs  usbhsh.rs  utick0.rs  wwdt.rs
src/adc0/: calib.rs  chan_thrsel.rs  ctrl.rs  dat.rs  flags.rs  insel.rs  inten.rs  seq_ctrl.rs  seq_gdat.rs  startup.rs  thr0_high.rs  thr0_low.rs  thr1_high.rs  thr1_low.rs
src/async_syscon/: asyncapbclkctrl.rs  asyncapbclkctrlclr.rs  asyncapbclkctrlset.rs  asyncapbclksela.rs  asyncpresetctrl.rs  asyncpresetctrlclr.rs  asyncpresetctrlset.rs
src/can0/: cccr.rs  dbtp.rs  ecr.rs  etscc.rs  etscv.rs  gfc.rs  hpms.rs  ie.rs  ile.rs  ils.rs  ir.rs  mrba.rs  nbtp.rs  ndat1.rs  ndat2.rs  psr.rs  rxbc.rs  rxesc.rs  rxf0a.rs  rxf0c.rs  rxf0s.rs  rxf1a.rs  rxf1c.rs  rxf1s.rs  sidfc.rs  tdcr.rs  test.rs  tocc.rs  tocv.rs  tscc.rs  tscv.rs  txbar.rs  txbc.rs  txbcf.rs  txbcie.rs  txbcr.rs  txbrp.rs  txbtie.rs  txbto.rs  txefa.rs  (+6 more)
src/crc_engine/: mode.rs
src/ctimer0/: ccr.rs  ctcr.rs  emr.rs  ir.rs  mcr.rs  msr.rs  pc.rs  pr.rs  pwmc.rs  tcr.rs
src/dma0/: abort0.rs  active0.rs  busy0.rs  channel.rs  enableclr0.rs  enableset0.rs  errint0.rs  inta0.rs  intb0.rs  intenclr0.rs  intstat.rs  (+4 more)
(+846 files in other folders)
