[package]
name = "lpc54628"
version = "0.1.0"
authors = ["Kook Dong-Min <pklazy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bare-metal = "0.2"
cortex-m = "0.6"
vcell = "0.1"

[dev-dependencies]
cortex-m = "0.6"
cortex-m-rt = "0.6"
panic-halt = "0.2"
cortex-m-semihosting = "0.3"
